<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s_wins"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quidditch.MainActivity">

    <ImageView
        android:id="@+id/s_image"
        android:layout_width="270dp"
        android:layout_height="357dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/s_wins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slytherin" />

    <TextView
        android:id="@+id/whoWonT"
        android:layout_width="212dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/s_wins"
        android:gravity="center"
        android:text="@string/s_wins"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_image"
        tools:text="@string/s_wins" />

    <Button
        android:id="@+id/snitchG"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:background="@color/orange"
        android:onClick="add150ForG"
        android:text="@string/snitch_catchG"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/snitchS"
        app:layout_constraintEnd_toEndOf="@+id/g_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_image" />

    <TextView
        android:id="@+id/quidditch"
        style="@style/nameOfGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quidditch"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/g_title"
        style="@style/nameOfGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gryffindor"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/s_title"
        app:layout_constraintEnd_toStartOf="@+id/s_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/g_score"
        style="@style/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/scoreG"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/s_score"
        app:layout_constraintEnd_toEndOf="@+id/g_image"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/g_image" />

    <Button
        android:id="@+id/hoopG"
        style="@style/buttons"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:onClick="add10ForG"
        android:text="@string/hoopG"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/g_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/g_image"
        app:layout_constraintTop_toBottomOf="@+id/g_score" />

    <ImageView
        android:id="@+id/g_image"
        android:layout_width="281dp"
        android:layout_height="331dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/Gryffindor_symbol"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/griffindor" />

    <Button
        android:id="@+id/penaltyG"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="add20ForG"
        android:text="@string/penalty_shotG"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/penaltyS"
        app:layout_constraintEnd_toEndOf="@+id/g_image"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="@+id/g_image" />

    <TextView
        android:id="@+id/s_title"
        style="@style/nameOfGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/slytherin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/g_title"
        app:layout_constraintTop_toBottomOf="@+id/quidditch" />

    <TextView
        android:id="@+id/s_score"
        style="@style/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreS"
        android:visibility="gone" />

    <Button
        android:id="@+id/hoopS"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add10ForS"
        android:text="@string/hoopS"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/hoopG" />

    <Button
        android:id="@+id/penaltyS"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="add20ForS"
        android:text="@string/penalty_shotS"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/hoopS" />

    <Button
        android:id="@+id/snitchS"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/orange"
        android:onClick="add150ForS"
        android:text="@string/snitch_catchS"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/penaltyS" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="1dp"
        android:layout_height="380dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/oldBackground"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/whoWonT"
        app:layout_constraintEnd_toStartOf="@+id/s_score"
        app:layout_constraintStart_toEndOf="@+id/g_score"
        app:layout_constraintTop_toBottomOf="@+id/quidditch"></LinearLayout>
</android.support.constraint.ConstraintLayout>